<resources>
    <string name="app_name" translatable="false">ANDAPP001</string>
    <string name="set_area">Set a new area</string>
    <string name="view_areas">Edit areas</string>
    <string name="area_entrence_notification">Notify me when I enter a predefined area.</string>
    <string name="draw_instruction">Touch and hold the center of the area where you want your phone to switch into silent mode, then drag to set the radius of the area.</string>
    <string name="config" translatable="false">Configuration</string>
    <string name="about">About us</string>
    <string name="title_activity_map" translatable="false">Map</string>
    <string name="save_button">Save </string>
    <string name="set_coords">Set coordinates</string>
    <string name="set_radius">Set radius</string>
    <string name="coords">Coordinates :</string>
    <string name="coord_value" translatable="false">-</string>
    <string name="radius">Radius :</string>
    <string name="radius_value" translatable="false">-</string>
    <string name="toggle_notification">Toogle notification</string>
    <string name="toggle_notification_desc">By toogling notifications you will be notified each time you enter predefined an area.</string>
    <string name="toggle_vibration">Vibrations</string>
    <string name="toggle_vibration_desc">Turn on vibrations</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>
    <string name="end_hour_desc">Select the time when the app must shut down.</string>
    <string name="start_hour_desc">Select the time when the app is active.</string>
    <string name="set_button">Set</string>
    <string name="cancel_button">Cancel</string>
    <string name="about_us" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquam pellentesque finibus. Etiam pretium nec velit dapibus mollis. Quisque rutrum.</string>
</resources>
