<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="bsol.andapp001.MapActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_bar" />
    <LinearLayout
        android:id="@+id/edit_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="1">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/pinImageButton"
            android:layout_weight="0"
            android:src="@drawable/ic_pinpoint"
            android:contentDescription="@string/set_coords" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/radiusImageButton"
            android:src="@drawable/ic_radius"
            android:contentDescription="@string/set_radius" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/saveImageButton"
            android:src="@drawable/ic_save"
            android:contentDescription="@string/save_button" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/coord_value"
                android:id="@+id/coords_value_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/coords"
                android:id="@+id/coords_label"
                android:layout_alignBottom="@+id/coords_value_label"
                android:layout_toLeftOf="@+id/coords_value_label"
                android:layout_toStartOf="@+id/coords_value_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/radius_value"
                android:id="@+id/radius_value_label"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/radius"
                android:id="@+id/radius_label"
                android:layout_alignTop="@+id/radius_value_label"
                android:layout_toLeftOf="@+id/radius_value_label"
                android:layout_toStartOf="@+id/radius_value_label" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
