<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bsol.andapp001.MainMenu">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/logo"
        android:contentDescription="App logo"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@id/logo"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo"
        android:layout_alignRight="@+id/logo"
        android:layout_alignEnd="@+id/logo">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_area"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_areas"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/config"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
